--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,297 @@
-.App {
-  text-align: center;
+:root {
+  --itemColor: rgba(218, 218, 218, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  user-select: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.backgroundGradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: radial-gradient(100% 155.31% at 0.86% 100%, rgba(122, 223, 255, 0.15) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(100% 158.02% at 100% 0%, rgba(157, 255, 122, 0.15) 0%, rgba(0, 0, 0, 0) 100%), rgba(9, 16, 23, 0.97);
+  transform: rotate(180deg);
+  z-index: -1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.subtitle {
+  font-family: "TT Norms";
+  font-weight: 400;
+  margin-top: 9px;
+  margin-left: -9px;
+  font-size: 13px;
+  line-height: 15px;
+  color: rgba(255, 255, 255, 0.3)
+}
+
+.inventory {
+  position: relative;
+  display: flex;
+  height: 680px;
+  column-gap: 100px;
+  margin-top: 22px;
+  margin-left: 89px;
+  column-gap: 100px;
+}
+
+.leftColumn {
+  align-self: flex-end;
+}
+
+.title {
+  margin: 53px 0 0 53px;
+}
+
+.equip {
+  width: 300px;
+  align-self: flex-end;
+  height: 680px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
+}
+
+.cloth {
+  display: flex;
+  column-gap: 29px;
+  margin-top: 24px;
+}
+
+.cloth__items {
+  justify-content: flex-end;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  column-gap: 22px;
+}
+
+.equipment__items {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.armor {
+  background: url(./assets/icons/armor.svg) center no-repeat;
+}
+
+.bag {
+  background: url(./assets/icons/bag.svg) center no-repeat;
+}
+
+.phone {
+  background: url(./assets/icons/phone.svg) center no-repeat;
+}
+
+.glasses {
+  background: url(./assets/icons/glasses.svg) center no-repeat;
+}
+
+.neck {
+  background: url(./assets/icons/neck.svg) center no-repeat;
+}
+
+.ring {
+  background: url(./assets/icons/ring.svg) center no-repeat;
+}
+
+.clock {
+  background: url(./assets/icons/watch.svg) center no-repeat;
+}
+
+.weapon {
+  margin-top: 18px;
+  display: flex;
+  column-gap: 11px;
+}
+
+.melee {
+  --color: rgba(218, 218, 218, 0.1);
+  width: 100px;
+  height: 218px;
+  padding: 10px;
+  box-sizing: border-box;
+  background-image: linear-gradient(to right, var(--color) 33px, transparent 33px, calc(100% - 33px), var(--color) calc(100% - 33px)),
+  linear-gradient(to right, var(--color) 33px, transparent 33px, transparent calc(100% - 33px), var(--color) calc(100% - 33px)),
+  linear-gradient(to bottom, transparent 1px, var(--color) 1px, var(--color) 33px, transparent 32px, transparent calc(218px - 34px), var(--color) calc(218px - 34px), var(--color) 217px, transparent calc(218px)),
+  linear-gradient(to bottom, transparent 1px, var(--color) 1px, var(--color) 33px, transparent 32px, transparent calc(218px - 34px), var(--color) calc(218px - 34px), var(--color) 217px, transparent calc(218px));
+  background-size: 100% 1px, 100% 1px, 1px 100%, 1px 100%;
+  background-position: 0 0, 0 100%, 0 0, 100% 0;
+  background-repeat: no-repeat;
+}
+
+.melee .weapon__item {
+  background: url(./assets/icons/knife.svg) no-repeat center var(--itemColor);
+}
+
+.ceil {
+  width: 80px;
+  height: 80px;
+  background-color: rgba(218, 218, 218, 0.1);
+}
+
+.ceil__hover {
+  box-shadow: inset 0px 0px 35px rgba(177, 255, 78, 0.25);
+}
+
+.range {
+  display: flex;
+  flex-direction: column;
+  row-gap: 18px;
+}
+
+.range__slot {
+  --color: rgba(218, 218, 218, 0.1);
+  width: 189px;
+  height: 100px;
+  box-sizing: border-box;
+  padding: 10px 9px;
+  background-image: linear-gradient(to right, var(--color) 33px, transparent 33px, transparent calc(100% - 33px), var(--color) calc(100% - 33px)),
+  linear-gradient(to right, var(--color) 33px, transparent 33px, transparent calc(100% - 33px), var(--color) calc(100% - 33px)),
+  linear-gradient(to bottom, transparent 1px, var(--color) 1px, var(--color) 33px, transparent 32px, transparent calc(100% - 34px), var(--color) calc(100% - 34px), var(--color) calc(100% - 1px), transparent 100%),
+  linear-gradient(to bottom, transparent 1px, var(--color) 1px, var(--color) 33px, transparent 32px, transparent calc(100% - 34px), var(--color) calc(100% - 34px), var(--color) calc(100% - 1px), transparent 100%);
+  background-size: 100% 1px, 100% 1px, 1px 100%, 1px 100%;
+  background-position: 0 0, 0 100%, 0 0, 100% 0;
+  background-repeat: no-repeat;
+}
+
+.range__slot[data-type='active'] {
+  --color: rgb(255, 242, 5, 0.25);
+  position: relative;
+}
+
+.range__slot[data-type='active']::before {
+  position: absolute;
+  content: "1";
+  width: 25px;
+  height: 25px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  top: 5px;
+  right: 5px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: "Din Next";
+  font-weight: 700;
+  font-size: 16px;
+  color: #3C3C3C;
 }
 
-.App-link {
-  color: #61dafb;
+.range__slot[data-type='active']:nth-of-type(2)::before {
+  content: "2"
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.range__slot:nth-of-type(2) .weapon__item {
+  background: url(./assets/icons/pistol.svg) no-repeat center var(--color);
+}
+
+.weapon__item {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color);
+}
+
+.ground {
+  --color: rgba(218, 218, 218, 0.1);
+  width: 466px;
+  height: 558px;
+  background-image: linear-gradient(to right, transparent, transparent),
+  linear-gradient(to right, transparent 3px, var(--color) 3px, var(--color)),
+  linear-gradient(to bottom, transparent calc(5% + 40px), var(--color) 95%, transparent 95%),
+  linear-gradient(to bottom, transparent calc(100% - 120px), var(--color) calc(95% - 3px), transparent calc(95% - 3%));
+  background-size: 100% 3px, 100% 3px, 3px 100%, 3px 100%;
+  background-position: 0 0, 0 95%, 0 0, 100% 0;
+  background-repeat: no-repeat;
+}
+
+.ground__items {
+  padding-left: 10px;
+  position: relative;
+  height: 440px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  column-gap: 10px;
+  row-gap: 10px;
+  margin: 28px 0 0 0;
+  direction: rtl;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.ground__items::-webkit-scrollbar {
+  width: 3px;
+  background: none;
+}
+
+.ground__items::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.85);
+  height: 10px;
+}
+
+.player_inventory {
+  margin-top: -30px;
+  width: 466px;
+  height: 709px;
+  background: url(./assets/icons/border.svg) no-repeat center bottom;
+  position: relative;
+}
+
+.headers {
+  display: flex;
+  align-items: flex-end;
+  margin-left: 22px;
+  margin-right: 13px;
+  justify-content: space-between;
+}
+
+.headers:nth-of-type(1) {
+  margin-top: 43px;
+}
+
+.headers:nth-of-type(2){
+  margin: 0;
+}
+
+.pockets {
+  padding-left: 10px;
+  position: relative;
+  height: 440px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  column-gap: 10px;
+  row-gap: 10px;
+  margin: 16px 0 30px;
+  direction: rtl;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.pockets::-webkit-scrollbar {
+  width: 3px;
+  background: none;
+}
+
+.pockets::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.85);
+  height: 10px;
+}
+
+.backpack {
+  display: flex;
+  column-gap: 10px;
+  margin-top: 16px;
+  margin-left: 13px;
+}
+
+.item {
+  direction: ltr;
+  width: 80px;
+  height: 80px;
+  background-color: rgba(218, 218, 218, 0.1);
 }
