--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: "Din Next";
+  src:  local("Din Next"),
+        url("/fonts/dinnextw1g.otf");
+}
+
+@font-face {
+  font-family: 'TT Norms';
+  src: local('TT Norms Regular'), local('TT-Norms-Regular'),
+      url('/fonts/TTNorms-Regular.woff2') format('woff2'),
+      url('/fonts/TTNorms-Regular.woff') format('woff'),
+      url('/fonts/TTNorms-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +21,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url(/src/assets/image\ 3.png);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.itemFront {
+  position: absolute;
+  width: 80px;
+  height: 80px;
 }
